# starting-word-shenanigans

./: .env.template  .gitignore  Cargo.toml  Dockerfile  compose.yml  valid-words.txt
src/: env.rs  main.rs  state.rs  words.rs
