[package]
name = "starting-word-shenanigans"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
itertools = "0.14.0"
parking_lot = "0.12.4"
poise = "0.6.1"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
